# AndroidKnowledge

./: Activity相关.md  Gradle基础知识.md  Java IO和Okio.md  OkHttp原理解析.md  README-Nakoruru.md  README.md  RecyclerView 知乎大佬分享.md  组件化和插件化和热更新.md  编码加密和hash.md  自定义View基础知识.md
Android Basic/: Android Firebase云消息 接入.md  Android RecyclerView 知乎大佬分享.md  Android RecyclerView 解密.md  Android 字节码插桩.md  Android面试超级攻略.md  Annotation Processing.md  待梳理开源项目.md  编程语言通用学习方法.md  通用密码学原理与应用实战.md
Android C/: C:C++.md  README.md
Android Compose/: Compose-Google.md  Compose-扔物线.md  README.md
Android Compose/ComposeBootcamp/: README.md
Android Compose/ComposeWeather/: README.md  build.gradle  local.properties  settings.gradle  (+1 more)
Android Course/: 企业级Android应用架构设计与开发.md
Android Cross-platform/: Flutter 3.x 仿抖音.md  Flutter bilibili.md  Flutter 抖音.md  Flutter 携程.md  Flutter 聊天机器人.md  README.md  RN仿喜马拉雅App.md  RN小红书APP.md
Android English/: NewOriental.md
Android Flutter/: Flutter 3.x 仿抖音.md
Android FrameWork/: 1-1.系统服务之谈谈你对Zygote的理解.md  1-2.系统服务之说说Android系统的启动.md  1-4.系统服务和bind的应用服务有什么区别.md  2-1.应用进程之应用进程是怎么启动的.md  2-3.应用进程之Application的理解.md  2-4.应用进程之Context的理解.md  3-1.Activity组件之Activity的启动流程.md  4-1.其他应用组件之service的启动原理.md  4-2.其他应用组件之service的绑定原理.md  5-2.UI体系之Surface跨进程传递原理.md  6-1.进程通信之Framework跨进程通信方式.md  6-2.进程通信之对Binder的理解.md  6-3.进程通信之一次完整的ipc通信流程是怎样的.md  6-4.进程通信之binder对象跨进程传递原理.md  6-5.进程通信之binder的oneway机制.md  7-1.线程通信之线程的消息队列是怎么创建的.md  7-2.线程通信之android线程间消息传递机制.md  7-3.线程通信之handler的消息延时是怎么实现的.md  7-6.线程通信之消息屏障.md  8-2.技巧之threadLocal的原理.md  8-3.技巧之looper的副业.md  9-2.综合性问题之Framework用到了哪些设计模式.md  AOSP下载&编译.md  README.md  车载系统.md
Android Git/: Git.md
Android Gradle/: Gradle Plugin.md  Gradle 脚本（Kotlin版本）.md  Gradle 配置文件拆解.md  Gradle基础知识.md
Android Java/: Java IO、NIO 和 Okio.md  Java 线程间通信本质和原理，以及 Android 中的多线程.md  Nacos 核心原理解读.md  Springboot3+微服务实战12306高性能售票系统.md
Android Jetpack/: Jetpack 短视频App.md  Jetpack-Hilt.md  Jetpack-Paging.md  Jetpack-ViewModel.md  Jetpack-ViewPager2.md
Android Kotlin/: Kotlin Coroutine Beginner 3.md  Kotlin Coroutine Flow.md  Kotlin Coroutine 实战训练.md
Android NDK/: README.md
Android Network/: HTTP工作原理.md  通用密码学原理与应用实战.md
Android Performance/: Android 性能优化之启动速度优化.md  性能优化之Apk打包.md
Android Reverse/: Android 逆向.md
Android docker/: 0.docker简单操作.md  0.安装redis集群.md  1.使用docker容器运行MongoDB.md  2.安装nginx.md  3.docker容器运行MongoDB.md  4.docker安装nexus.md  docker-compose.yml  使用-Docker-部署-Spring-Boot-项目.md  系统学习Docker-践行DevOps理念.md  系统学习Docker（二）.md
Android 开源框架/: RxJava 原理解析.md
Android 性能优化/: Android 性能优化.md
C/: C:C++.md  C:C++从0到1系统精讲项目开发.md  C:C++气象数据中心.md
English/: README.md
Flutter/: AIdea.md
Go/: README.md
Python/: README.md
database/: 6大数据库，挖掘7种业务场景的存储更优解.md  MySQL面试指南.md  README.md
前沿技术/: ChatGPT 从零到一打造私人智能英语学习助手.md  TensorFlow+CNN实战AI图像处理.md
技术之外/: 代码的艺术.md
老笔记未整理/: Android Image.md  Android KTX 了解.md  Android Notification.md  Android 性能优化.md  Android 组件化和插件化.md  Android 绘制.md  Java IO、NIO 和 Okio.md  Java 多线程和线程同步.md  Jetpack-DataBinding.md  Jetpack-LiveData&&Lifecycle.md  Jetpack-WorkManager.md  Jetpack.md  Kotlin Coroutine Beginner 1.md  Kotlin Coroutine Flow.md  Kotlin Coroutine 实战训练.md
音视频 0Voice/: 1-音视频基础.md  10-FFmpeg过滤器实战.md  11-ffplay播放器剖析.md  15-RTMP流媒体实战.md  2-开发环境搭建.md  21-Android NDK开发.md  3-FFmpeg命令实战.md  6-SDL音视频渲染实战.md  7-FFmpeg基础.md
音视频 MK/: 0-常见问题.md  0-附录.md  1-C++环境配置.md  10-RTMP传输.md  11-CDN 实现商业娱乐直播.md  12-FFmpeg SDL音视频渲染实战.md  13-FFmpeg播放器核心功能开发.md  14-滤镜Filter的核心原理及实现.md  15-如何在Android下使用FFmpeg.md  2-Linux 基础命令.md  3-Vim编辑器.md  4-tmux 使用文档.md  5-安装ffmpeg.md  6-1-FFmpeg常用命令实战.md  6-2-FFmpeg命令大全.docx  7-FFmpeg多媒体文件处理.md  8-1-音频-基础知识和编码原理.md  8-2-FFmpeg编解码实战.md  9-1-视频-基础知识.md  9-2-视频-H264编码原理.md  9-3-视频-视频编码:解码.md
音视频 MK/ffmpeg-so-test/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
音视频 MK/ffmpeg-so-test/app/src/main/cpp/include/libavutil/: ffversion.h
音视频 MK/ffmpeg-so-test/app/src/main/cpp/util/: LogUtil.h
音视频 OpenCV/: 1-win.py  2-readimg.py  3-capvideo.py  LICENSE  OpenCV三大经典项目实战.md  testopencv.py
音视频 OpenCV/FaceIdentity/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
音视频 WebRTC/: WebRTC实时互动直播.md  WebRTC流媒体服务器.md  WebRTC源码深度解析.md
音视频 basic/: Android 零基础开发相机.md  README.md  码牛音视频笔记.md
音视频 basic/GifFrameWork/app/src/main/cpp/: CMakeLists.txt  demo.cpp  native-lib.cpp
音视频 basic/MusicPlayer/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
音视频 basic/MusicPlayer57/app/src/main/cpp/: CMakeLists.txt  MusicAudio.cpp  MusicAudio.h  MusicCallJava.cpp  MusicCallJava.h  MusicFFmpeg.cpp  MusicFFmpeg.h  MusicPlayStatus.h  MusicQueue.h  MusicVideo.cpp  MusicVideo.h
音视频 basic/x264Live/app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  safe_queue.h  seclog.h
音视频 basic/x264Live/app/src/main/cpp/x264/armeabi-v7a/include/: x264_config.h
音视频 basic/x264Live/app/src/main/cpp/x264/armeabi-v7a/lib/pkgconfig/: x264.pc
(+1265 files in other folders)
